--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/react-calendar": "^3.9.0",
     "@types/react-router-dom": "^5.3.3",
+    "date-fns": "^4.1.0",
     "react": "^19.1.0",
     "react-calendar": "^6.0.0",
     "react-dom": "^19.1.0",
